<resources>
    <string name="app_name">tinder_doggo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">register</string>

    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="create_account_not_found">Account could not be found do you want to create a new one ?</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="race">Race</string>
    <string name="choose_img">Choose an image</string>
    <string name="user_name">Your name</string>
    <string name="get_new_doggo">Show me the locals doggos</string>
    <string name="last_doggos">Matched Doggos</string>
</resources>
